# AHN

./: .gitignore  README.md  pyproject.toml
data/: README.md  dataset_info.json
eval/: README.md
eval/longbench/: eval.py  eval.sh  pred.py
eval/longbench/configs/: dataset2maxlen.json  dataset2prompt.json
eval/lveval/: config.py  eval.py  metrics.py  pred.py  utils.py
examples/scripts/: train_qwen2.5_3b_ahn_gdn.sh
src/ahn/transformer/qwen2_ahn/: qwen2_ahn.py
src/ahn/transformer/qwen3/: modeling_qwen3.py
src/ahn/transformer/qwen3_ahn/: __init__.py  qwen3_ahn.py
